fix header and white spaces

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -154,7 +154,7 @@ body {
 	float: left;
 	font-family: "Baskervville";
 	text-align: center;
-	font-size: 30px;
+	font-size: 26px;
 	background-color: #151517;
 	top: 0px; 
 	left: 0px; 
